# PECOS-alt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  Cargo.toml  DECODERS.md  DESIGN_unified_simulation_api.md  HUGR_MEASUREMENT_SUMMARY.md  HUGR_PIPELINE_STRUCTURE.md  Justfile  LLVM_IR_CONVENTIONS.md  LLVM_JIT_DISABLED_SUCCESS.md  LLVM_JIT_REMOVAL_PLAN.md  Makefile  QIR_LLVM_FILES.md  QIR_SEGFAULT_ISSUE.md  QIR_TEST_FIX_SUMMARY.md  QIR_TEST_LOCK_ISSUE.md  README.md  SECURITY.md  build.sh  debug_detailed.py  debug_exact_test.py  debug_execution_environment.py  debug_imports.py  debug_llvm_ir.py  debug_minimal_qir.py  debug_multiple_runs.py  debug_pytest_direct.py  debug_pytest_env.py  debug_pytest_simulation.py  debug_qir_content.py  debug_return_issue.py  debug_runtime_qir.py  debug_segfault.py  debug_segfault2.py  debug_step_by_step.py  debug_x_gate.py  deny.toml  guppy_generated.ll  (+58 more)
clib/pecos-rng/: CMakeLists.txt  pyproject.toml
clib/pecos-rng/pecos_pcg/: __init__.py
clib/pecos-rng/src/: rng_pcg.c  rng_pcg.h  wrapper.cpp
crates/benchmarks/: Cargo.toml  README.md  build.rs
crates/benchmarks/benches/: benchmarks.rs
crates/benchmarks/examples/: profile_dem_decomposition.rs
crates/pecos-build/: Cargo.toml  README.md
crates/pecos-build-utils/: Cargo.toml
crates/pecos-build-utils/src/: cache.rs  dependencies.rs  download.rs  errors.rs  extract.rs  lib.rs
crates/pecos-build/src/: cargo_config.rs  cmake.rs  cuda.rs  cuquantum.rs  cutensor.rs  deps.rs  download.rs  errors.rs  extract.rs  home.rs  lib.rs  llvm.rs  manifest.rs  prompt.rs
crates/pecos-chromobius/: Cargo.toml  README.md  build.rs  build_chromobius.rs  build_stim.rs  chromobius_patch.rs  pecos.toml
crates/pecos-chromobius/examples/: chromobius_example.rs
crates/pecos-chromobius/include/: chromobius_bridge.h
crates/pecos-chromobius/src/: bridge.cpp  bridge.rs  decoder.rs  lib.rs
crates/pecos-chromobius/tests/: determinism_tests.rs
crates/pecos-cli/: Cargo.toml  README.md
crates/pecos-cli/.cargo/: config.toml
crates/pecos-cli/src/: cli.rs  engine_setup.rs  main.rs
crates/pecos-cli/tests/: basic_determinism_tests.rs  bell_state_tests.rs  llvm.rs  llvm_test_lock.rs  llvm_tests.rs  qir.rs  qir_test_lock.rs  qir_tests.rs  seed.rs  simple_determinism_test.rs  worker_count_tests.rs
crates/pecos-clib-pcg/: Cargo.toml  README.md  build.rs
crates/pecos-clib-pcg/c_src/: rng_pcg.c  rng_pcg.h
crates/pecos-clib-pcg/src/: lib.rs
crates/pecos-clib-pcg/tests/: pcg_tests.rs
crates/pecos-core/: Cargo.toml  README.md
crates/pecos-core/examples/: profile_vecset.rs  replaying_rng.rs
crates/pecos-core/src/: angle.rs  bit.rs  bit_int.rs  bit_uint.rs  bitset.rs  bitvec.rs  channel.rs  circuit_diagram.rs  classical_bit_id.rs  clifford.rs  clifford_rep.rs  clifford_simplify.rs  duration.rs  element.rs  errors.rs  gate.rs  gate_algebra.rs  gate_registry.rs  gate_type.rs  gates.rs  index_set.rs  lib.rs  meas_id.rs  op.rs  operator.rs  pauli.rs  phase.rs  prelude.rs  qubit_id.rs  qubit_support.rs  rng.rs  signal.rs  sims_rngs.rs  sorted_vec_set.rs  struct_metadata.rs  types.rs  unitary.rs  unitary_rep.rs  value.rs
crates/pecos-core/tests/: bitvec_arithmetic_fix_test.rs  clifford_rep_roundtrip_tests.rs  rng_tests.rs
crates/pecos-cppsparsesim/: Cargo.toml  README.md  build.rs
crates/pecos-cppsparsesim/src/: cxx_shim.cpp  cxx_shim.h  lib.rs  sparsesim.cpp  sparsesim.h  sparsesim_col.cpp  sparsesim_row.cpp
crates/pecos-cppsparsesim/tests/: basic_test.rs  test_tableau_trait.rs
crates/pecos-cuquantum/: Cargo.toml  build.rs
crates/pecos-cuquantum-sys/: Cargo.toml  build.rs  wrapper.h
crates/pecos-cuquantum-sys/src/: lib.rs  loader.rs
crates/pecos-cuquantum/benches/: cuquantum_benchmark.rs
crates/pecos-cuquantum/src/: densitymat.rs  error.rs  lib.rs  stabilizer.rs  statevec.rs  tensornet.rs
crates/pecos-cuquantum/tests/: integration_test.rs
crates/pecos-decoder-core/: Cargo.toml  README.md
crates/pecos-decoder-core/src/: adaptive.rs  advanced.rs  bp_matching.rs  committed_osd.rs  config.rs  correlated_decoder.rs  correlated_reweighting.rs  correlation_table.rs  decode_budget.rs  dem.rs  ensemble.rs  erasure.rs  errors.rs  ghost_protocol.rs  k_mwpm.rs  lib.rs  logical_algorithm.rs  matrix.rs  multi_decoder.rs  observable_subgraph.rs  pauli_frame.rs  perturbed.rs  preprocessor.rs  results.rs  streaming.rs  telemetry.rs  two_pass_decoder.rs  windowed_osd.rs
crates/pecos-decoder-core/tests/: ensemble_integration.rs
crates/pecos-decoders/: Cargo.toml  README.md
crates/pecos-decoders/src/: lib.rs
crates/pecos-engines/: Cargo.toml  QIR_RUNTIME.md  README.md  build.rs
crates/pecos-engines/examples/: biased_depolarizing_example.rs  biased_measurement_example.rs  compare_noise_models.rs  data_vec_example.rs  general_noise_test.rs  reusable_simulations.rs  run_noisy_circ.rs  run_noisy_circ_with_general.rs  shot_map_all_types.rs  shot_map_bitvec_extraction.rs  shot_map_display_formatting.rs  shot_map_json.rs  shot_map_usage.rs  simple_json_conversion.rs  unified_api_result_formats.rs
crates/pecos-engines/src/: byte_message.rs  channels.rs  classical.rs  core.rs  data_vec.rs  engine.rs  engine_builder.rs  engine_system.rs  engines.rs  hybrid.rs  lib.rs  message.rs  monte_carlo.rs  noise.rs  prelude.rs  quantum.rs  quantum_engine_builder.rs  quantum_system.rs  record_data.rs  result_id.rs  sampling.rs  shot_map.rs  shot_map_formatter.rs  shot_results.rs  (+3 more)
crates/pecos-experimental/: Cargo.toml
crates/pecos-ffi/: Cargo.toml
crates/pecos-foreign/: Cargo.toml
crates/pecos-fusion-blossom/: Cargo.toml  README.md
crates/pecos-gpu-sims/: Cargo.toml  README.md
crates/pecos-guppy-hugr/: Cargo.toml
crates/pecos-hugr/: Cargo.toml  README.md
crates/pecos-hugr-llvm/: Cargo.toml
crates/pecos-hugr-qis/: Cargo.toml  README.md
crates/pecos-ldpc-decoders/: Cargo.toml  README.md  build.rs  build_ldpc.rs  pecos.toml
crates/pecos-llvm/: Cargo.toml  README.md  build.rs
crates/pecos-llvm-sim/: Cargo.toml  README.md  SUMMARY.md
crates/pecos-llvm-utils/: Cargo.toml  README.md
(+4065 files in other folders)
