[workspace]
resolver = "2"
members = [
  "python/pecos-rslib",
  "python/pecos-rslib-cuda",
  "python/selene-plugins/pecos-selene-*",
  "julia/pecos-julia-ffi",
  "go/pecos-go-ffi",
  "crates/pecos*",
  "crates/benchmarks",
  "exp/pecos*",
]

[workspace.package]
version = "0.2.0-dev.0"
edition = "2024"
readme = "README.md"
authors = ["The PECOS Developers", "Ciaran Ryan-Anderson<ciaranra@gmail.com>"]
homepage = "https://pecos.io"
repository = "https://github.com/PECOS-packages/PECOS"
license = "Apache-2.0"
keywords = ["scientific", "quantum", "QEC"]
categories = ["science", "simulation"]

[workspace.dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rayon = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
criterion = "0.8"
libloading = "0.9"
libc = "0.2"
bytemuck = { version = "1", features = ["derive"] }
bitflags = "2"
dyn-clone = "1"
regex = "1"
pest = "2"
pest_derive = "2"
tempfile = "3"
assert_cmd = "2"
wasmtime = { version = "42", default-features = false, features = [
  "cranelift",
  "runtime",
  "wat",
  "std",
] }
wat = "1"
ron = "0.12"
tket = { version = "0.17", default-features = false }
tket-qsystem = { version = "0.23", default-features = false }
# Pin hugr-core to 0.25.6: hugr-core 0.25.7 widened strum to >=0.27.2,<0.29 which lets the
# resolver pick strum 0.28, conflicting with tket 0.17 (requires strum ^0.27).
# hugr-core 0.25.6 uses strum ^0.27.2 so there's no conflict.
# Remove this pin once tket updates to strum 0.28+.
hugr-core = "=0.25.6"
bindgen = "0.72"
cc = "1"
cxx = "1"
cxx-build = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "rustls",
] }
flate2 = "1"
sha2 = "0.10"
dirs = "6"
inkwell = "0.8"
cargo_metadata = "0.23"
random_tester = "0.1"
toml = "1"
wide = "1"

# Archive handling
xz2 = "0.1"
bzip2 = "0.6"
tar = "0.4"
sevenz-rust = "0.6"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# ZX calculus
quizx = "0.3"

# Small vector optimization
smallvec = "1"

# Iterator utilities
itertools = "0.14"

# Numerical computing
levenberg-marquardt = "0.15"
nalgebra = "0.34"
rustworkx-core = "0.17"
num = "0.4"
num-complex = "0.4"
num-traits = "0.2"
num-bigint = { version = "0.4", features = ["serde"] }
bitvec = { version = "1", features = ["serde"] }
ndarray = "0.17"

# RNG
fastrand = "2"
rand = "0.10"
rand_core = "0.10"
rand_xoshiro = "0.8"
rapidhash = { version = "4", features = ["rng"] }

# Concurrency
crossbeam-channel = "0.5"

# GPU
wgpu = "28"
pollster = "0.4"

# Testing
approx = "0.5"
paste = "1"

# Windows workaround: Disable zstd-sys legacy feature to avoid MSVC ICE
# MSVC 14.43 has an internal compiler error (C1001) when compiling zstd_v06.c
# The legacy feature compiles old zstd formats (v0.1-v0.7) that PECOS doesn't need
# zstd-sys = { version = "2.0", default-features = false, features = ["zdict_builder"] }

# Internal crates
pecos-build = { version = "0.2.0-dev.0", path = "crates/pecos-build", default-features = false }
pecos-core = { version = "0.2.0-dev.0", path = "crates/pecos-core" }
pecos = { version = "0.2.0-dev.0", path = "crates/pecos", default-features = false }
pecos-programs = { version = "0.2.0-dev.0", path = "crates/pecos-programs" }
pecos-simulators = { version = "0.2.0-dev.0", path = "crates/pecos-simulators" }
pecos-qasm = { version = "0.2.0-dev.0", path = "crates/pecos-qasm" }
pecos-phir-json = { version = "0.2.0-dev.0", path = "crates/pecos-phir-json" }
pecos-engines = { version = "0.2.0-dev.0", path = "crates/pecos-engines" }
pecos-experimental = { version = "0.2.0-dev.0", path = "exp/pecos-experimental" }
pecos-phir = { version = "0.2.0-dev.0", path = "crates/pecos-phir" }
pecos-qec = { version = "0.2.0-dev.0", path = "crates/pecos-qec" }
pecos-random = { version = "0.2.0-dev.0", path = "crates/pecos-random" }
pecos-qis-ffi = { version = "0.2.0-dev.0", path = "crates/pecos-qis-ffi" }
pecos-qis-ffi-types = { version = "0.2.0-dev.0", path = "crates/pecos-qis-ffi-types" }
pecos-qis = { version = "0.2.0-dev.0", path = "crates/pecos-qis" }
pecos-hugr-qis = { version = "0.2.0-dev.0", path = "crates/pecos-hugr-qis" }
pecos-hugr = { version = "0.2.0-dev.0", path = "crates/pecos-hugr" }
pecos-llvm = { version = "0.2.0-dev.0", path = "crates/pecos-llvm" }
pecos-rslib = { version = "0.2.0-dev.0", path = "python/pecos-rslib" }
pecos-wasm = { version = "0.2.0-dev.0", path = "crates/pecos-wasm" }
pecos-num = { version = "0.2.0-dev.0", path = "crates/pecos-num" }
pecos-quantum = { version = "0.2.0-dev.0", path = "crates/pecos-quantum" }
pecos-zx = { version = "0.2.0-dev.0", path = "exp/pecos-zx" }
pecos-gpu-sims = { version = "0.2.0-dev.0", path = "crates/pecos-gpu-sims" }
pecos-cuquantum = { version = "0.2.0-dev.0", path = "crates/pecos-cuquantum" }
pecos-neo = { version = "0.2.0-dev.0", path = "exp/pecos-neo" }
pecos-cuquantum-sys = { version = "0.2.0-dev.0", path = "crates/pecos-cuquantum-sys" }

# Decoder crates
pecos-decoder-core = { version = "0.2.0-dev.0", path = "crates/pecos-decoder-core" }
pecos-decoders = { version = "0.2.0-dev.0", path = "crates/pecos-decoders" }

# ldpc decoder wrapper (https://github.com/quantumgizmos/ldpc)
pecos-ldpc-decoders = { version = "0.2.0-dev.0", path = "crates/pecos-ldpc-decoders" }

# PyMatching decoder wrapper (https://github.com/oscarhiggott/PyMatching)
pecos-pymatching = { version = "0.2.0-dev.0", path = "crates/pecos-pymatching" }

# Tesseract decoder wrapper (https://github.com/quantumlib/tesseract-decoder)
pecos-tesseract = { version = "0.2.0-dev.0", path = "crates/pecos-tesseract" }

# Chromobius decoder wrapper (https://github.com/quantumlib/chromobius)
pecos-chromobius = { version = "0.2.0-dev.0", path = "crates/pecos-chromobius" }

# Fusion Blossom decoder wrapper (pure Rust MWPM)
pecos-fusion-blossom = { version = "0.2.0-dev.0", path = "crates/pecos-fusion-blossom" }

# Relay BP decoder wrapper (pure Rust BP for qLDPC codes)
pecos-relay-bp = { version = "0.2.0-dev.0", path = "crates/pecos-relay-bp" }

# Fusion Blossom library (pure Rust MWPM decoder)
fusion-blossom = "0.2"

# Relay BP library (pure Rust belief propagation decoder)
relay-bp = "0.2"

# ndarray 0.16 for relay-bp compatibility (relay-bp uses ndarray 0.16, PECOS uses 0.17)
ndarray-016 = { package = "ndarray", version = "0.16" }

# sprs for sparse matrix construction (pinned to 0.11.3 for ndarray 0.16 compat with relay-bp)
sprs = "=0.11.3"

# petgraph for graph algorithms (used by pymatching)
petgraph = "0.8"

# QuEST simulator wrapper (https://github.com/quest-kit/QuEST)
pecos-quest = { version = "0.2.0-dev.0", path = "crates/pecos-quest" }

# Qulacs simulator wrapper (https://github.com/qulacs/qulacs)
pecos-qulacs = { version = "0.2.0-dev.0", path = "crates/pecos-qulacs" }

# CppSparseSim simulator wrapper
pecos-cppsparsestab = { version = "0.2.0-dev.0", path = "crates/pecos-cppsparsestab" }

# Optimize build times
[profile.dev]
opt-level = 0                # No optimization for faster compilation
debug = true                 # Include debug info
incremental = true           # Enable incremental compilation
split-debuginfo = "unpacked" # Faster linking on supported platforms

# For tests, use no optimization for the fastest compilation
[profile.test]
opt-level = 0                # No optimization for the fastest compilation
debug = true                 # Include debug info
incremental = true           # Enable incremental compilation
split-debuginfo = "unpacked" # Faster linking on supported platforms

# The release profile
[profile.release]
opt-level = 3     # Maximum optimization
lto = true        # Link-time optimization (same as "fat")
codegen-units = 1 # Single codegen unit for better optimization

# Native profile: release + CPU-specific optimizations
# Use with: cargo build --profile native
# Build scripts detect this via PROFILE=native env var and add --march=native for C++ code
[profile.native]
inherits = "release"

[workspace.lints.clippy]
# For more details see: https://doc.rust-lang.org/clippy/lints.html
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# restriction = "warn"
cargo = { level = "warn", priority = -1 }
multiple-crate-versions = "allow"         # TODO: remove when possible
# Allow more function arguments for PyO3 bindings (many parameters needed for Python interop)
too-many-arguments = "allow"
# Numeric casts are pervasive in quantum sim code; values are known to fit
cast-possible-truncation = "allow"
cast-precision-loss = "allow"
cast-sign-loss = "allow"
cast-possible-wrap = "allow"
# Math/physics code uses short, similar variable names (sx/sz, stab/destab, x/z/r/s/p)
similar-names = "allow"
many-single-char-names = "allow"
# Complex quantum algorithms are inherently long
too-many-lines = "allow"
# Often needed for trait conformance or API consistency
needless-pass-by-value = "allow"
# Error conditions and panics are self-evident from types
missing-errors-doc = "allow"
missing-panics-doc = "allow"
# Common pattern in this codebase for local helpers
items-after-statements = "allow"
# Trait implementations require &self even when unused
unused-self = "allow"
# Prevents false positives on type names matching module
module-name-repetitions = "allow"
