[project]
name = "pecos-workspace"
version = "0.7.0.dev0"
dependencies = [
    # Note: guppylang is an optional dependency in quantum-pecos
    # Don't include it here as a direct dependency
]

[tool.uv.workspace]
members = [
    "python/pecos-rslib",
    "python/quantum-pecos"
]

[tool.uv.sources]
# guppylang = { path = "../guppylang" }  # Commented out to use packaged version

[dependency-groups]
dev = [
    "nanobind",
    "maturin>=1.2,<2.0", # For building (should match build requirements)
    "setuptools>=62.6", # Build system
    "pre-commit", # Git hooks
    "black", # Code formatting
    "ruff", # Fast Python linting
    "mkdocs", # Documentation framework
    "mkdocs-material", # Material theme for MkDocs
    "mkdocstrings[python]", # Code documentation extraction
    "markdown-exec[ansi]", # Executable markdown blocks
    # Runtime dependencies for development
    "numpy>=1.15.0",
    "scipy>=1.1.0",
    "networkx>=2.1.0",
    "matplotlib>=2.2.0",
    "phir>=0.3.3",
    # WebAssembly runtimes for testing
    "wasmtime>=13.0",
    "jupyter>=1.1.1",
]
test = [ # pinning testing environment
    "pytest==8.3.3", # 8.3.4 seems to be causing errors
    "pytest-cov==6.0.0",
    "hypothesis==6.122.3",
]

[tool.uv]
default-groups = ["dev", "test"]

# Override dependencies to ensure correct versions
override-dependencies = [
    "hugr==0.13.0",
]

[tool.pytest.ini_options]
markers = [
    "optional_dependency: mark a test as using one or more optional dependencies",
    "optional_unix: mark tests as using an optional dependency that only work with Unix-based systems",
    "wasmer: mark test as using the 'wasmer' option",
    "wasmtime: mark test as using the 'wasmtime' option",
]
