[project]
name = "pecos-workspace"
version = "0.8.0.dev8"
requires-python = ">=3.10"
# Meta-package; runtime deps live in the member packages. Test/example/dev
# tooling is declared in [dependency-groups] below.
dependencies = []

[project.optional-dependencies]
# Keep this in sync with the cuda dependency group below. The extra supports
# `uv sync --extra cuda`; the group supports `uv run --group cuda ...`.
cuda = ["quantum-pecos[cuda]==0.8.0.dev8"]

[tool.uv.workspace]
members = [
  "python/pecos-rslib",
  "python/pecos-rslib-exp",
  "python/pecos-rslib-cuda",
  "python/pecos-rslib-llvm",
  "python/quantum-pecos",
  "python/selene-plugins/pecos-selene-mast",
  "python/selene-plugins/pecos-selene-stab-mps",
  "python/selene-plugins/pecos-selene-stab-vec",
  "python/selene-plugins/pecos-selene-stabilizer",
  "python/selene-plugins/pecos-selene-statevec",
]

[tool.uv.sources]
quantum-pecos = { workspace = true }

[dependency-groups]
# Build, lint, and docs tooling. Runtime deps used by member packages
# (networkx, matplotlib, phir, ...) come in transitively via quantum-pecos.
dev = [
  "maturin>=1.13.1,<2.0",                   # For building (matches sub-package build-system requirements)
  "patchelf; platform_system != 'Windows'", # For setting rpath in shared libraries (Linux/macOS only)
  "setuptools>=82.0.1",                     # Build system
  "pre-commit",                             # Git hooks
  "black",                                  # Code formatting
  "ruff",                                   # Fast Python linting
  "tomli>=1.1.0; python_version < '3.11'",  # TOML parsing (stdlib in 3.11+)
  "mkdocs",                                 # Documentation framework
  "mkdocs-material",                        # Material theme for MkDocs
  "mkdocstrings[python]",                   # Code documentation extraction
  "markdown-exec[ansi]",                    # Executable markdown blocks
]
test = [ # exact pins so workspace tests run against a reproducible environment
  # Note: sub-package test extras (pecos-rslib, selene plugins) intentionally
  # use `pytest>=9.0` lower bounds instead of these exact pins -- those
  # packages ship to PyPI and must stay installable against newer pytest
  # releases that downstream users may already have. Reproducibility for
  # in-repo dev comes from uv.lock, not from over-constraining the sub-package
  # requires-dist.
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "pytest-timeout==2.4.0",
  "hypothesis==6.152.1",
  "stim==1.15.0",        # Stim-comparison and decomposition-invariant tests
  "matplotlib>=2.2.0",   # Surface-patch render tests import matplotlib directly
]
examples = [ # extras used by the examples/ tree and notebook walkthroughs
  "jupyter>=1.1.1",
  "polars>=1.0.0",
]
numpy-compat = [ # NumPy/SciPy compatibility tests - verify compatibility with scientific Python stack
  "numpy>=1.15.0",
  "scipy>=1.1.0",
]
cuda = [ # CUDA Python packages for GPU-accelerated simulations (requires CUDA toolkit)
  "quantum-pecos[cuda]==0.8.0.dev8",
]

[tool.uv]
default-groups = ["dev", "test"]
# Prevent uv from caching native workspace wheels - always use freshly built versions.
# This fixes stale code issues when uv sync/run reinstalls cached old wheels.
# See: https://github.com/astral-sh/uv/issues/11390
reinstall-package = [
  "pecos-rslib",
  "pecos-rslib-cuda",
  "pecos-rslib-exp",
  "pecos-rslib-llvm",
]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
  "optional_dependency: mark a test as using one or more optional dependencies",
  "optional_unix: mark tests as using an optional dependency that only work with Unix-based systems",
  "slow: mark tests that provide extra integration coverage but are excluded from the default fast Python test lane",
  "numpy: mark tests that verify NumPy compatibility (requires numpy installed)",
]
