[build-system]
requires = ["scikit-build-core[pyproject]", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "pecos-pcg"
version = "0.6.0.dev8"
description = "A Python package with a nanobind-based C++ extension"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License"
]

[tool.scikit-build]
wheel.packages = ["pecos_pcg"]
# Optional: set cmake minimum version or other CMake arguments
cmake.minimum-version = "3.18"
cmake.verbose = true
