[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
description = "Performance benchmarks for PECOS (internal)"
readme = "README.md"

[features]
default = []
parallel = ["pecos-qsim/parallel"]
gpu-sims = ["dep:pecos-gpu-sims"]
cuquantum = ["dep:pecos-cuquantum"]
quest = ["dep:pecos-quest"]
quest-cuda = ["quest", "pecos-quest/cuda"]
qulacs = ["dep:pecos-qulacs"]
cppsparsesim = ["dep:pecos-cppsparsesim"]
all-sims = ["gpu-sims", "cuquantum", "quest", "qulacs", "cppsparsesim"]

[dependencies]
# Optional simulator dependencies for benchmarking
pecos-gpu-sims = { workspace = true, optional = true }
pecos-cuquantum = { workspace = true, optional = true }
pecos-quest = { workspace = true, optional = true }
pecos-qulacs = { workspace = true, optional = true }
pecos-cppsparsesim = { workspace = true, optional = true }
pecos-core.workspace = true
pecos-qsim.workspace = true

[dev-dependencies]
criterion.workspace = true
cxx.workspace = true
num-complex.workspace = true
pecos = { workspace = true, features = ["runtime"] }
pecos-engines.workspace = true
pecos-qec.workspace = true
pecos-quantum.workspace = true
pecos-rng.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
rapidhash.workspace = true
wide.workspace = true

[[bench]]
name = "benchmarks"
harness = false

[lints]
workspace = true
