[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
description = "Performance benchmarks for PECOS (internal)"
readme = "README.md"

[features]
default = []
parallel = ["pecos-simulators/parallel"]
gpu-sims = ["dep:pecos-gpu-sims"]
cuquantum = ["dep:pecos-cuquantum"]
cppsparsestab = ["dep:pecos-cppsparsestab"]
stab-tn = ["dep:pecos-stab-tn"]
all-sims = ["gpu-sims", "cuquantum", "cppsparsestab"]

[dependencies]
# Optional simulator dependencies for benchmarking
pecos-gpu-sims = { workspace = true, optional = true }
pecos-cuquantum = { workspace = true, optional = true }
pecos-cppsparsestab = { workspace = true, optional = true }
pecos-core.workspace = true
pecos-simulators.workspace = true
pecos-stab-tn = { path = "../../exp/pecos-stab-tn", optional = true }
nalgebra.workspace = true
num-complex.workspace = true

[dev-dependencies]
criterion.workspace = true
cxx.workspace = true
num.workspace = true
quizx.workspace = true
num-complex.workspace = true
pecos = { workspace = true, features = ["runtime"] }
pecos-engines.workspace = true
pecos-neo.workspace = true
pecos-qec.workspace = true
pecos-quantum.workspace = true
pecos-random.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
rapidhash.workspace = true
wide.workspace = true

[[bench]]
name = "benchmarks"
harness = false

[lints]
workspace = true
