[package]
name = "pecos-build-utils"
version.workspace = true
edition = "2024"
description = "Shared build utilities for pecos-decoders workspace"
license = "Apache-2.0 OR MIT"
authors = ["Pecos Decoders Contributors"]
publish = false

[dependencies]
thiserror.workspace = true
reqwest.workspace = true
sha2.workspace = true
dirs.workspace = true
tar.workspace = true
flate2.workspace = true
bzip2.workspace = true
