[package]
name = "pecos-build-utils"
version.workspace = true
edition.workspace = true
description = "Shared build utilities for pecos-decoders workspace"
license.workspace = true
authors = ["Pecos Decoders Contributors"]
publish = false

[dependencies]
thiserror.workspace = true
reqwest.workspace = true
sha2.workspace = true
dirs.workspace = true
tar.workspace = true
flate2.workspace = true
bzip2.workspace = true

[lints]
workspace = true
